--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<div id="panel">
+<div id="panel" style="z-index:10">
 
 	<div id="panelCaller"> Control Panel  &nbsp;  &nbsp;</div>
 
