--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Analysis History Visualization</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" href="./styles/simple-style.css">
-	<link rel="stylesheet" href="./libraries/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="./libraries/font-awesome-4.7.0/css/font-awesome.min.css"> -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
@@ -90,7 +90,7 @@
 	
 		<div id="topic_slider">
 			<p2  style= "position: absolute;">
-			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="100" value = "1" id="topic_weight_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
+			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="100" value = "0" id="topic_weight_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
 			</p2> 
 		</div>
 	</br>
@@ -100,7 +100,7 @@
 	</br>
 		<div id="action_slider">
 			<p2  style= "position: absolute;">
-			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="400" value = "50" id="action_weight_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
+			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="400" value = "400" id="action_weight_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
 			</p2> 
 		</div>
 	</br>
