Clustering added, more fixes on time stamps,

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			&nbsp; &nbsp; &nbsp; Time distance:
 	</br>
 	  	<div id="time_slider">
-			<p2  style= "position: absolute;">
+			<p2  style= "position: relative;">
 			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="100" value = "100" id="time_weight_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
 			</p2> 
 		</div>
@@ -89,7 +89,7 @@
 	</br>
 	
 		<div id="topic_slider">
-			<p2  style= "position: absolute;">
+			<p2  style= "position: relative;">
 			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="100" value = "0" id="topic_weight_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
 			</p2> 
 		</div>
@@ -99,7 +99,7 @@
 			&nbsp; &nbsp; &nbsp; User action distance:
 	</br>
 		<div id="action_slider">
-			<p2  style= "position: absolute;">
+			<p2  style= "position: relative;">
 			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="400" value = "400" id="action_weight_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
 			</p2> 
 		</div>
@@ -107,13 +107,16 @@
 	</br>
 	</br>
 	</br>
+				&nbsp; &nbsp; &nbsp; Clustering Ratio:
+	</br>
+		<div id="cluster_slider">
+			<p2  style= "position: relative;">
+			&nbsp; &nbsp; &nbsp;&nbsp;	<input type="range" min="0" max="100" value = "20" id="clustering_ratio_slider" style="width: 300px; height: 20px; writing-mode: bt-lr; ">
+			</p2> 
+		</div>
 	</br>
 	</br>
 	</br>
-	</br>
-	</br>
-
-	
 	&nbsp; &nbsp; &nbsp; Time Segments:  <input type="button" value="Download" onclick="saveIt()"> 
 	</br>
 	</br>
